# zotero-tools

./: .gitattributes  .gitignore  0-AI-MANIFEST.a2ml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPLAINME.adoc  Justfile  NOTICE  PROOF-NEEDS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  SECURITY.md  TEST-NEEDS.md  TOPOLOGY.md  URGENT-RESCRIPT-MIGRATION.md  flake.nix  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.hypatia/: activity.jsonl  last-visit.json
.machine_readable/: ADJUST.contractile  AGENTIC.a2ml  CLADE.a2ml  ECOSYSTEM.a2ml  INTENT.contractile  MUST.contractile  STATE.a2ml  STATE.scm  TRUST.contractile
.well-known/: humans.txt  security.txt
LICENSES/: PMPL-1.0-or-later.txt
docs/: architecture.adoc  contributing.adoc  tech-debt-2026-05-26.md  troubleshooting.adoc  usage.adoc
fogbinder/: .editorconfig  .gitignore  ABI-FFI-README.md  API.adoc  ARCHITECTURE_RESCRIPT_WASM.adoc  CHANGELOG.adoc  CONTRIBUTING.adoc  CONTRIBUTING.md  DEVELOPMENT.adoc  GITHUB_PROTECTION_RULES.adoc  Justfile  LICENSE_DUAL.adoc  LICENSE_TLDR.adoc  MAINTAINERS.adoc  PHILOSOPHY.adoc  README.adoc  ROADMAP.adoc  RSR_ACHIEVEMENT.adoc  RSR_AUDIT.adoc  RSR_COMPLIANCE_REPORT.adoc  RSR_FINAL_STATUS.adoc  RSR_PLATINUM_ACHIEVEMENT.adoc  RSR_v3.0_CANONICAL.adoc  RSR_v3.0_STANDARD.adoc  SECURITY.md  SUMMARY.adoc  TESTING-REPORT.adoc  TESTING-REPORT.scm  TPCF.adoc  bootstrap.js  bsconfig.json  deno.json  fogbinder.ncl  justfile  manifest.json  package-lock.json  package.json
fogbinder/src/wasm/: Cargo.toml
fogbinder/src/wasm/contradiction_detector/: Cargo.toml
fogbinder/src/wasm/contradiction_detector/src/: lib.rs
fogbinder/src/wasm/crypto/: Cargo.toml
fogbinder/src/wasm/crypto/src/: lib.rs
fogbinder/src/wasm/graph_algorithms/: Cargo.toml
fogbinder/src/wasm/graph_algorithms/src/: lib.rs
fogbinder/src/wasm/string_similarity/: Cargo.toml
fogbinder/src/wasm/string_similarity/src/: lib.rs
formbd/: .gitignore  Main.lean  README.adoc  ROADMAP.adoc  install.ps1  install.sh  lakefile.lean
librarian/: Manifest.toml  Project.toml  README.adoc  ROADMAP.adoc  SECURITY.md
nesy/: .editorconfig  .eslintrc.json  .gitattributes  .gitignore  CHANGELOG.adoc  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Justfile  (+19 more)
(+519 files in other folders)
