[package]
name = "fogbinder-contradiction-detector"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
