[package]
name = "fogbinder-crypto"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true

# Post-quantum cryptography
pqcrypto-kyber.workspace = true
pqcrypto-traits.workspace = true

# Cryptography
ed25519-dalek.workspace = true
sha3.workspace = true
blake3.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true

# Utilities
serde.workspace = true
serde_json.workspace = true
getrandom.workspace = true

[features]
default = ["ed448", "kyber1024", "shake256", "argon2id"]
ed448 = []
kyber1024 = []
shake256 = []
blake3_hash = []
argon2id = []
chacha20 = []
